doc: updates functionality list (adds integrity checksums)

--- a/doc/FITSlib.tex
+++ b/doc/FITSlib.tex
@@ -35,9 +35,11 @@ Functionality:
 
 - endianness
 
+- implicit type conversion (Tm Tc Tf)
+
 - scaling
 
-- implicit type conversion (Tm Tc Tf)
+- integrity checksums
 
 - compression
 
