alg Numeric_Type: adds comment on renaming type

--- a/algorithm-dataaccess/abstractnumerictype/notes.tex
+++ b/algorithm-dataaccess/abstractnumerictype/notes.tex
@@ -28,3 +28,16 @@ incorrect: being in-range of target-valid values, we must check
 that Vout=UndefOut only-and-only-if Vin=UndefIn
 
 
+
+Renaming a type
+
+"A subtype of an indefinite subtype that does not add a constraint only
+introduces a new name for the original subtype (a kind of renaming under a different notion).
+
+subtype My_String is String;
+
+My_String and String are interchangeable."
+
+From: https://en.wikibooks.org/wiki/Ada_Programming/Type_System#Anonymous_subtype
+
+
