--- a/doc/FITSlib.tex
+++ b/doc/FITSlib.tex
@@ -46,12 +46,37 @@ Functionality:
 
 
 \subsection{File}
-It is based on Stream\_IO ...
+It implements FITS\_IO which is based on streams (in case of GNAT C-Streams FILE*) similarly to Streams\_IO implementation.
+
+
+
 \subsubsection{Positioning to HDU}
 
 To reach a HDU given by HDUNum first parse header's mandatory keywords and use Eq(X)
 to calulate Data Unit size. 
 
+
+\subsubsection{Header and Data access Rules}
+
+2 Rules:
+
+\textbf{Raw-side/type} is defined by Header in BOTH cases Read/Write
+
+Each invocation of DataUnit.Read/Write modifies File.Index only, as it shifts through the Data\_Unit sequentially
+
+\textit{NOTE: ergo, there needs to be a Data\_Unit.Init/Open... func AFTER Header is ready and T is known (Data\_Unit instantiated), but BEFORE repeated calls to DU Read/Write start.}
+
+.
+
+additional 2 Rules:
+
+Header is DU-Type independent (Strings,?Floats?)
+
+Data\_Unit package is generic by T and so defines \textbf{Physical-side/type}
+
+\textit{NOTE: the Header is \textbf{metadata} by its character, and as such it merely DESCRIBES the Raw-data.
+Whereas the Data\_Unit contains the data itself and as such it IMPLEMENTS the data and so defines
+the Physical-side/type.}
 
 
 \subsection{Header read write}
@@ -140,8 +165,8 @@ package body Linear\_Conv is
 
 \section{Source inserts}
 
-\subsection{Specification fits.ads}
-\inputminted[linenos, fontsize=\footnotesize]{ada}{../lib/src/fits.ads}
+%\subsection{Specification fits.ads}
+%\inputminted[linenos, fontsize=\footnotesize]{ada}{../lib/src/fits.ads}
 
 \subsection{Specification file/file.ads}
 \inputminted[linenos, fontsize=\footnotesize]{ada}{../lib/src/file/file.ads}
@@ -149,11 +174,11 @@ package body Linear\_Conv is
 \subsection{Specification parser/mandatory.ads}
 \inputminted[linenos, fontsize=\footnotesize]{ada}{../lib/src/parser/mandatory.ads}
 
-\subsection{Specification image/alt\_4/physical\_read.ads}
-\inputminted[linenos, fontsize=\footnotesize]{ada}{../lib/src/image/alt_4/physical_read.ads}
+%\subsection{Specification image/alt\_4/physical\_read.ads}
+%\inputminted[linenos, fontsize=\footnotesize]{ada}{../lib/src/image/alt_4/physical_read.ads}
 
-\subsection{Specialization for data types as of FITS ver 3 (api/alt\_4/v3\_image\_read.ads)}
-\inputminted[linenos, fontsize=\footnotesize]{ada}{../lib/src/api/alt_4/v3_image_read.ads}
+%\subsection{Specialization for data types as of FITS ver 3 (api/alt\_4/v3\_image\_read.ads)}
+%\inputminted[linenos, fontsize=\footnotesize]{ada}{../lib/src/api/alt_4/v3_image_read.ads}
 
 \end{document}
 
