doc: note on FITS_IO.File_Type being able besides storing data also converting and scaling it with undef support

--- a/doc/FITSlib.tex
+++ b/doc/FITSlib.tex
@@ -26,6 +26,17 @@
 
 \section{FITS library}
 
+FITS-file serves as a container to store data and metada. It is capable of storing data
+in differemt type then avaialable. FITS\_IO.File\_Type is capable of
+
+* converting data to other type
+
+* scaling the values (to fit the range)
+
+* and if needed, allows to mark undefined values and automatically replces them during conversion.
+
+
+
 
 \section{Algorithms}
 
